# starter-lab02

./: CMakeLists.txt  LICENSE  README.md
NumericalIntegration/: CMakeLists.txt
NumericalIntegration/include/: NumericalIntegration.h
NumericalIntegration/src/: NumericalIntegration.cpp
Simulator/: CMakeLists.txt
Simulator/include/: Simulator.h
Simulator/src/: Simulator.cpp  main.cpp
tests/: BackwardEulerTest.cpp  CMakeLists.txt  Comparison.h  ForwardEulerTest.cpp  OutputFileTest.cpp  TrapezoidalTest.cpp
