set(INTEGRATION_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR}/include)
file(GLOB_RECURSE INTEGRATION_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
file(GLOB_RECURSE INTEGRATION_HEADERS ${INTEGRATION_INCLUDE}/*.h)

add_library(NumericalIntegration STATIC ${INTEGRATION_SOURCE} ${INTEGRATION_HEADERS})
target_include_directories(NumericalIntegration PUBLIC ${INTEGRATION_INCLUDE})

